src/github.com/ebay/beam/query/parser/testdata/insert/errors/bad_object.res
parser: unexpected type *parser.LiteralSet as object of fact 1